webify structure coming out, full small app built up

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+#compiled python files
 *.pyc
+
+#for vim files
+*.swp
+
+#for emacs files?
+*~
+*.cache
+*#*
+
+#for some other editor?
+*.DS_Store
+
